# affinity

./: CMakeLists.txt  CpuAffinity.h  IrqAffinity.h  README.md
test/: CMakeLists.txt  CpuAffinityTest.cpp  IrqAffinityTest.cpp
